feat: Add automation challenge functionality with page object model
- Updated .gitignore to include environment files
- Added dotenv dependency for environment variable management
- Refactored Playwright test configuration to specify test directory
- Removed demo-todo-app.spec.ts and example.spec.ts as they are no longer needed
- Created data interface for challenge data structure
- Implemented ChallengePage, LoginPage, and ResultPage classes for better test organization
- Added utility functions for filling inputs and handling captcha
- Created complete-challenge.spec.ts to test the automation challenge flow
- Introduced data.json to store challenge data
- Added environment variable helper for sensitive data management

--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -17,6 +17,10 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+    - name: Set up environment variables from Github Action secrets
+      run: |
+        echo "AUTOMATION_CHALLANGE_EMAIL=${{ secrets.AUTOMATION_CHALLANGE_EMAIL }}" >> $GITHUB_ENV
+        echo "AUTOMATION_CHALLANGE_PASSWORD=${{ secrets.AUTOMATION_CHALLANGE_PASSWORD }}" >> $GITHUB_ENV
     - name: Run Playwright tests
       run: npx playwright test
     - uses: actions/upload-artifact@v4
